--- a/index.html
+++ b/index.html
@@ -42,9 +42,14 @@
 	  ga('send', 'pageview');
 
 	</script>
+	<script type="text/javascript">
+    function didLoad() {
+        window.location.href="weiyou://didLoad"  // by decamincow
+    }
+</script>
 </head>
 	
-	<body> 
+	<body onLoad="didLoad()">
 		<div id="viewporter">
 		   <canvas id="canvas" moz-opaque></canvas>
 		</div>
